# rust-starterpack

./: .gitignore  Cargo.toml  README.md  mm-config.toml
scripts/: build  build.bat  clean  clean.bat  run  run.bat
src/: main.rs
src/core/: config.rs  ipc.rs  mod.rs  state.rs  util.rs
src/strategy/: main.rs  mod.rs
