[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
memmap = "0.7.0"
pastey = "0.1.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
